; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_cmdutils.c_grow_array.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_cmdutils.c_grow_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT_MAX = common dso_local global i32 0, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"Array too big.\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"Could not alloc buffer.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @grow_array(i8* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %9, align 4
  %12 = load i32, i32* @INT_MAX, align 4
  %13 = load i32, i32* %7, align 4
  %14 = sdiv i32 %12, %13
  %15 = icmp sge i32 %11, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %4
  %17 = load i32, i32* @AV_LOG_ERROR, align 4
  %18 = call i32 @av_log(i32* null, i32 %17, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %19 = call i32 @exit_program(i32 1)
  br label %20

20:                                               ; preds = %16, %4
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* %9, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %54

25:                                               ; preds = %20
  %26 = load i8*, i8** %6, align 8
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i8* @av_realloc_array(i8* %26, i32 %27, i32 %28)
  store i8* %29, i8** %10, align 8
  %30 = load i8*, i8** %10, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %36, label %32

32:                                               ; preds = %25
  %33 = load i32, i32* @AV_LOG_ERROR, align 4
  %34 = call i32 @av_log(i32* null, i32 %33, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %35 = call i32 @exit_program(i32 1)
  br label %36

36:                                               ; preds = %32, %25
  %37 = load i8*, i8** %10, align 8
  %38 = load i32*, i32** %8, align 8
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* %7, align 4
  %41 = mul nsw i32 %39, %40
  %42 = sext i32 %41 to i64
  %43 = getelementptr i8, i8* %37, i64 %42
  %44 = load i32, i32* %9, align 4
  %45 = load i32*, i32** %8, align 8
  %46 = load i32, i32* %45, align 4
  %47 = sub nsw i32 %44, %46
  %48 = load i32, i32* %7, align 4
  %49 = mul nsw i32 %47, %48
  %50 = call i32 @memset(i8* %43, i32 0, i32 %49)
  %51 = load i32, i32* %9, align 4
  %52 = load i32*, i32** %8, align 8
  store i32 %51, i32* %52, align 4
  %53 = load i8*, i8** %10, align 8
  store i8* %53, i8** %5, align 8
  br label %56

54:                                               ; preds = %20
  %55 = load i8*, i8** %6, align 8
  store i8* %55, i8** %5, align 8
  br label %56

56:                                               ; preds = %54, %36
  %57 = load i8*, i8** %5, align 8
  ret i8* %57
}

declare dso_local i32 @av_log(i32*, i32, i8*) #1

declare dso_local i32 @exit_program(i32) #1

declare dso_local i8* @av_realloc_array(i8*, i32, i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
